[package]
name = "fliplru"
version = "0.1.4"
edition = "2021"
description = "A LRU cache that shows effectiveness of cache capacity"
license-file = "LICENSE"
keywords = ["lru", "cache"]
documentation = "https://docs.rs/fliplru"
repository = "https://github.com/ddalton/fliplru.git"
homepage = "https://github.com/ddalton/fliplru"
categories = ["data-structures", "memory-management", "development-tools::profiling", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14.0"
polonius-the-crab = "0.3.1"
